--- a/ui/ui_MainWindow.ui
+++ b/ui/ui_MainWindow.ui
@@ -116,6 +116,12 @@
               <pointsize>12</pointsize>
              </font>
             </property>
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>12</number>
+            </property>
             <property name="value">
              <number>1</number>
             </property>
